<resources>
    <string name="app_name">Stock Hawk</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint" translatable="false">FB</string>
    <string name="input_prefill"></string>
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>

    <!--empty stock list -->
    <string name="empty_stock_list">No Stock Information Available</string>
    <string name="empty_stock_list_no_network">No stock information available. The network is not available to fetch stock data.</string>
    <string name="stock_already_saved">This stock is already saved!</string>
    <string name="empty_graph">No Data to show</string>
    <string name="content_description">price graph over time</string>
    <string name="stock_symbol">Stock Symbol</string>
    <string name="stock_name">Stock Name</string>
    <string name="first_trade">First Trade</string>
    <string name="last_trade">Last Trade</string>
    <string name="currency">Currency</string>
    <string name="bid_price">Bid Price</string>
    <string name="invalid_stock">Invalid Stock Symbol</string>
    <string name="fab_description">Add New Stock</string>
    <string name="chart_description">1 Year Stock History</string>
    <string name="chart_fetching">Fetching Data...</string>
    <string name="chart_content_description">Line Chart showing historical data for</string>
    <string name="failure_message">Can\'t show data, there is some problem</string>

    <string name="pref_stock_status_key">stock-status</string>
</resources>
